Added a photo and recipe description

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -5,7 +5,13 @@
 <title>Ramen Recipe</title>
 </head>    
 <body>
-<h1>Ramen</h1>
+<h1>ラメン | Ramen</h1>
+<img src="../images/ramen.jpg" alt="a tasty-looking bowl of ramen" height="400"> 
+
+<h3>Description</h3>
+<p>
+    <strong>ラメン | ra-men</strong>: A Japanese dish comprised of broth and noodles, often garnished with fresh vegetables, a softboiled egg and bits of meat or plant-based protein.
+</p>
 </body>
 
 </html>
