Added preparation steps for the user to follow

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -22,8 +22,18 @@
     <li>1 bunch scallions</li>
     <li>2-3 handfuls of various vegetables for topping</li>
     <li>1 soft-boiled egg</li>
-
 </ul>
+<h3>Preparation Steps</h3>
+<ol>
+    <li>In a large pot over medium heat, add oil and heat until fragrant.</li>
+    <li>Add miso paste and stir to incorporate.</li>
+    <li>Add the broth and bring to a slow simmer. Taste and adjust seasoning as desired.</li>
+    <li>Bring another bot of unsalted water to boil over high heat. Cook ramen according to package directions.</li>
+    <li>Strain noodles and add to a bowl. Ladle the broth over the cooked noodles.</li>
+    <li>Cut soft-boiled eggs in half and add to bowl.</li>
+    <li>Garnish with vegetables and scallions.</li>
+    <li>Enjoy!</li>
+</ol>
 </body>
 
 </html>
