Added a link to the mochi recipe

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>    
 <body>
 <h1>Recipes</h1>
-<a href="recipes/ramen.html">Ramen Recipe</a>
+<p><a href="recipes/ramen.html">Ramen Recipe</a></p>
+<p><a href="recipes/mochi.html">Mochi Recipe</a></p>
 </body>
 
 </html>
