Created a link to the sushi recipe page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <h1>Recipes</h1>
 <p><a href="recipes/ramen.html">Ramen Recipe</a></p>
 <p><a href="recipes/mochi.html">Mochi Recipe</a></p>
+<p><a href="recipes/sushi.html">Sushi Recipe</a></p>
 </body>
 
 </html>
