Updated the recipe name definitions

--- a/recipes/mochi.html
+++ b/recipes/mochi.html
@@ -10,7 +10,7 @@
 
 <h3>Description</h3>
 <p>
-    <strong>もち | mo-CHI</strong>: A Japanese rice cake made up <em>mochigome</em>, a short-grain glutinous rice that gives it an elestic, chewy texture. Mochi tastes like rice on its own but is often paired with a sweet filling such as red bean paste.
+    <strong>もち /mo-CHI/</strong>: A Japanese rice cake made up <em>mochigome</em>, a short-grain glutinous rice that gives it an elestic, chewy texture. Mochi tastes like rice on its own but is often paired with a sweet filling such as red bean paste.
 </p>
 
 <h3>Ingredients</h3>
