--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -10,7 +10,7 @@
 
 <h3>Description</h3>
 <p>
-    <strong>ラメン | ra-men</strong>: A Japanese dish comprised of broth and noodles, often garnished with fresh vegetables, a softboiled egg and bits of meat or plant-based protein.
+    <strong>ラメン /rä′mən/</strong>: A Japanese dish comprised of broth and noodles, often garnished with fresh vegetables, a softboiled egg and bits of meat or plant-based protein.
 </p>
 
 <h3>Ingredients</h3>
