Updated the main recipe page title and heading to be more descriptive

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Recipes</title>
+<title>Japanese Recipes</title>
 </head>    
 <body>
-<h1>Recipes</h1>
+<h1>Japanese Recipes</h1>
 <p><a href="recipes/ramen.html">Ramen Recipe</a></p>
 <p><a href="recipes/mochi.html">Mochi Recipe</a></p>
 <p><a href="recipes/sushi.html">Sushi Recipe</a></p>
