--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 </head>    
 <body>
 <h1>Japanese Recipes</h1>
-<p><a href="recipes/ramen.html">Ramen Recipe</a></p>
-<p><a href="recipes/mochi.html">Mochi Recipe</a></p>
-<p><a href="recipes/sushi.html">Sushi Recipe</a></p>
+<ul>
+
+<li><a href="recipes/ramen.html">Ramen</a></li>
+<li><a href="recipes/mochi.html">Mochi</a></li>
+<li><a href="recipes/sushi.html">Sushi</a></li>
+</ul>
 </body>
 
 </html>
