--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link href="style.css" rel="stylesheet">
+<link href="../style.css" rel="stylesheet">
 <!--Noto Sans JP 100-900 font and Poppins 400 and 600 font; sans-serif-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
