--- a/recipes/mochi.html
+++ b/recipes/mochi.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <link href="../style.css" rel="stylesheet">
-<!--Noto Sans JP 100-900 font and Poppins 400 and 600 font; sans-serif-->
+<!--Poppins 400 and 600 font; sans-serif-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <title>Mochi Recipe</title>
 </head>    
 <body>
