Centered recipe images and added a color style to h3 elements

--- a/recipes/mochi.html
+++ b/recipes/mochi.html
@@ -11,7 +11,7 @@
 </head>    
 <body>
 <h1>もち | Mochi</h1>
-<img src="../images/mochi.jpg" alt="two fresh-looking mochi propped up on a pair of chopsticks for presentation" height="600ß"> 
+<img class="centered-image" src="../images/mochi.jpg" alt="two fresh-looking mochi propped up on a pair of chopsticks for presentation" height="600ß"> 
 
 <h3>Description</h3>
 <p>
