--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>    
 <body>
 <h1>Japanese Recipes</h1>
+<img src="./images/asakusa.jpg" alt="a colourful alley in Asakusa, Tokyo" height="500"> 
 <ul>
 
 <li><a href="recipes/ramen.html">Ramen</a></li>
