--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <img src="./images/asakusa.jpg" alt="a colourful alley in Asakusa, Tokyo" height="500"> 
 <ul>
 
-<li><a href="recipes/ramen.html">Ramen</a></li>
-<li><a href="recipes/mochi.html">Mochi</a></li>
-<li><a href="recipes/sushi.html">Sushi</a></li>
+<li class="home-links"><a class="link-colour" href="recipes/ramen.html">Ramen</a></li>
+<li class="home-links"><a class="link-colour" href="recipes/mochi.html">Mochi</a></li>
+<li class="home-links"><a class="link-colour" href="recipes/sushi.html">Sushi</a></li>
 </ul>
 </body>
 
