Fixed ramen page's custom font link and reduced all recipe image sizes for visual consistency

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -3,12 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <link href="../style.css" rel="stylesheet">
-
+<!--Poppins 400 and 600 font; sans-serif-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <title>Ramen Recipe</title>
 </head>    
 <body>
 <h1>ラメン | Ramen</h1>
-<img class="centered-image" src="../images/ramen.jpg" alt="a tasty-looking bowl of ramen" height="400"> 
+<img src="../images/ramen.jpg" alt="a tasty-looking bowl of ramen" height="400"> 
 
 <h3>Description</h3>
 <p>
