Added a unique border radius to each image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>    
 <body>
 <h1>Japanese Recipes</h1>
-<img src="./images/asakusa.jpg" alt="a colourful alley in Asakusa, Tokyo" height="500"> 
+<img class="home-image" src="./images/asakusa.jpg" alt="a colourful alley in Asakusa, Tokyo" height="500"> 
 <ul>
 
 <li class="home-links"><a class="link-colour" href="recipes/ramen.html">Ramen</a></li>
