--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -11,7 +11,7 @@
 </head>    
 <body>
 <h1>すし | Sushi</h1>
-<img src="../images/sushi.jpg" alt="a colourful spread of prepared sushi with edamame and a Japanese newspaper pictured in the background" height="320"> 
+<img class="sushi-image"src="../images/sushi.jpg" alt="a colourful spread of prepared sushi with edamame and a Japanese newspaper pictured in the background" height="320"> 
 
 <h3>Description</h3>
 <p>
