--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -11,7 +11,7 @@
 </head>    
 <body>
 <h1>ラメン | Ramen</h1>
-<img src="../images/ramen.jpg" alt="a tasty-looking bowl of ramen" height="400"> 
+<img class="ramen-image" src="../images/ramen.jpg" alt="a tasty-looking bowl of ramen" height="400"> 
 
 <h3>Description</h3>
 <p>
